# NEXUS-SPECTER-PRO

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  nsp_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml
config/: scope.yaml.example  settings.yaml
dashboard/backend/: main.py  main_v2.py
dashboard/frontend/: package.json
dashboard/frontend/src/: App.jsx  AppV2.jsx
deployment/ansible/: inventory.ini  setup.yml
deployment/kubernetes/: configmap.yaml  deploy.sh  hpa.yaml  ingress.yaml  namespace.yaml  nsp-core.yaml  postgres.yaml  redis.yaml  secret.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  INSTALLATION.md  QUICKSTART.md
missions/: black_box.yaml  cloud_audit.yaml  gray_box.yaml  red_team.yaml  white_box.yaml
nsp/: __init__.py
nsp/ai_engine/: __init__.py  specter_ai.py
nsp/automation/: __init__.py  alert_engine.py  asset_discovery.py  change_detector.py  mission_scheduler.py  parallel_executor.py
nsp/core/: __init__.py  celery_tasks.py  orchestrator.py  plugin_loader.py  scope_validator.py  session_manager.py  target_profiler.py
nsp/devsecops/: __init__.py  cloud_posture.py  container_scanner.py  iac_scanner.py  secret_scanner.py  supply_chain_audit.py
nsp/enumeration/web/: api_enum.py  dir_fuzzer.py
nsp/exploitation/: __init__.py  msf_controller.py
nsp/exploitation/credentials/: spray_attacker.py
nsp/exploitation/web/: sqli_exploit.py
nsp/intelligence/: __init__.py  attack_graph.py  attack_narrative.py  cve_correlator.py  false_positive_filter.py  ioc_tracker.py  threat_intel_engine.py
nsp/post_exploitation/lateral_movement/: bloodhound_runner.py  impacket_suite.py
nsp/post_exploitation/privesc/: linux_privesc.py  windows_privesc.py
nsp/recon/: __init__.py
nsp/recon/active/: __init__.py  cloud_recon.py  port_scanner.py  subdomain_enum.py
nsp/recon/passive/: __init__.py  asn_mapper.py  certificate_transparency.py  email_harvester.py  favicon_hasher.py  github_dorking.py  osint_engine.py
nsp/reporting/: compliance_reporter.py  cvss_scorer.py  executive_dashboard.py  mitre_attack_mapper.py  remediation_advisor.py  report_generator.py  report_generator_v2.py  risk_matrix_generator.py  trend_analyzer.py
nsp/utils/: crypto.py  logger.py  validator.py
nsp/vuln_scan/: nuclei_runner.py  ssl_scanner.py  web_scanner.py
tests/integration/: __init__.py  test_api.py
tests/unit/: test_cvss_scorer.py  test_intelligence.py  test_scope_validator.py  test_session_manager.py  test_sprint7.py  test_sprint8.py
